--- a/website.html
+++ b/website.html
@@ -48,7 +48,7 @@
                     from guitar playing to quantum computing.
                 </p>
                 <p>
-                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="ugs.foundation"><mark>Ukraine Global Scholars finalist</mark></a>, mentor, and volunteer. I am also learning to play guitar and run cross-country in my free time.
+                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="ugs.foundation"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar and run cross-country in my free time.
                 </p>
                 <p>
                     Feel free to browse through my website to learn more about me!
