--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="left-side-menu-fixed">
-        <a href="website.html" class="logo-menu-fixed">
+        <a href="index.html" class="logo-menu-fixed">
             <h1>VERONIKA</h1>
             <p>KITSUL</p>
         </a>
@@ -19,17 +19,12 @@
             <ul>
                 <li>
                     <a href="education.html">
-                        <span>EDUCATION</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span>EXPERIENCE</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
                         <span>CV</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>PROJECTS</span>
                     </a>
                 </li>
             </ul>
@@ -48,13 +43,15 @@
                                     <ul class="timeline">
                                         <li class="event" data-date="2020-2022">
                                             <h3><a href="https://www.stmarksschool.org/">St. Mark's School</a></h3>
-                                            <p>Advanced curriculum in Computer Science, Math, Physics and History</p>
                                             <p>Selected to do a research on theoretical computer science at Taft STEM Fellowship program</p>
-                                            <p>Chosen to participate at Lion's Roam experiential learning course </p>
+                                            <p>Chosen to participate at Lion's Roam experiential learning course with trips to South Africa and Southern US</p>
+                                            <p>Co-head of the International Student Connection Affinity Group</p>
                                         </li>
                                         <li class="event" data-date="2016-2020">
                                             <h3>Ivano-Frankivsk Academical Lyceum</h3>
-                                            <p>Get ready for an exciting event, this will kick off in amazing fashion with MOP &amp; Busta Rhymes as an opening show.</p>
+                                            <p>GPA: 11.3 out of 12.0</p>
+                                            <p>Ranked 1 out of 450 students for four years in a row and recognized as a "Student of the Year"</p>
+                                            <p>Selected to serve as a student body Minister of Education</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -70,7 +67,7 @@
                             <div class="card">
                                 <div id="content">
                                     <ul class="timeline">
-                                        <li class="event" data-date="2020-2022">
+                                        <li class="event" data-date="2021">
                                             <h3><a href="https://www.qubitbyqubit.org/">Qubit by Qubit Quantum Computing Summer School</a></h3>
                                             <p>Received a scholarship from IBM Quantum to attend a quantum computing summer program as one of 250 students out of 3000 students who applied.</p>
                                         </li>
