--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="ul-list-menu-fixed">
             <ul>
                 <li>
-                    <a href="education.html">
+                    <a href="cv.html">
                         <span>CV</span>
                     </a>
                 </li>
