--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
     <div class="visit-card">
         <div class="media-body">
             <div class="education-text">
-                <h3>EDUCATION</h3>
+                <h4>EDUCATION</h4>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -51,6 +51,7 @@
                                             <h3>Ivano-Frankivsk Academical Lyceum</h3>
                                             <p>GPA: 11.3 out of 12.0</p>
                                             <p>Ranked 1 out of 450 students for four years in a row and recognized as a "Student of the Year"</p>
+                                            <p>Recipient of the Mayor Scholarship for outstanding academic achievements in 20+ regional competitions</p>
                                             <p>Selected to serve as a student body Minister of Education</p>
                                         </li>
                                     </ul>
@@ -60,27 +61,67 @@
                     </div>
                 </div>
 
-                <h3 id="add-ed">ADDITIONAL EDUCATION</h3>
+                <h4 class="add-ed">SCIENTIFIC RESEARCH</h4>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="card">
-                                <div id="content">
+                                <div class="content">
+                                    <ul class="timeline">
+                                        <li class="event" data-date="2018-2020">
+                                            <h3>Electrochemical supercapacitors based on nanoporous carbon from apricot seeds</h3>
+                                            <p>Finalist of the International Science Fair "Genius Olympiad" (cancelled due to COVID-19)</p>
+                                            <p>Selected to represent Ukraine at the international Science Fair “Think Science” (cancelled due to COVID-19)</p>
+                                            <p>3rd prize winner of the National Stage of Research Competition at Junior Academy of Sciences of Ukraine in Experimental Physics (out of 7983 participants)</p>
+                                        </li>
+                                        <li class="event" data-date="present">
+                                            <h3>Current Research</h3>
+                                            <p>Conducting a research project as part of the Taft STEM Fellowship course at St. Mark's School on Chaotic Electrical Circuits in Cryptography</p>
+                                            <p>History Fellowship on Space Race Policital Cartoons in the US and USSR</p>
+                                        </li>
+                                        <li class="event" data-date="2019">
+                                            <h3>Properties of Quenched Glass</h3>
+                                            <p>2nd prize winner of the Regional Stage of Research Competition at Junior Academy of Sciences of Ukraine in Experimental Physics</p>
+                                            <p>Studied traditional ways of glass quenching and Prince Rupert's drop characteristics; described a correlation between various conditions during the formation of the drop and its resilience; suggested creating
+                                                a quenched glass in a linear form and a quenched triplex</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <h4 class="add-ed">ADDITIONAL EDUCATION</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2021">
                                             <h3><a href="https://www.qubitbyqubit.org/">Qubit by Qubit Quantum Computing Summer School</a></h3>
                                             <p>Received a scholarship from IBM Quantum to attend a quantum computing summer program as one of 250 students out of 3000 students who applied.</p>
                                         </li>
-                                        <li class="event" data-date="2016-2020">
-                                            <h3>Ivano-Frankivsk Academical Lyceum</h3>
-                                            <p>Get ready for an exciting event, this will kick off in amazing fashion with MOP &amp; Busta Rhymes as an opening show.</p>
+                                        <li class="event" data-date="2021">
+                                            <h3><a href="https://ulo.stanford.edu/mathematics">Stanford Pre-Collegiate University-Level Online Math</a></h3>
+                                            <p>Completed two-months summer program in XM511 Linear Algebra course intended for Math majors</p>
                                         </li>
-                                        <li class="event" data-date="5:00 - 8:00pm">
-                                            <h3>Main Event</h3>
-                                            <p>This is where it all goes down. You will compete head to head with your friends and rivals. Get ready!</p>
+                                        <li class="event" data-date="2021">
+                                            <h3><a href="https://www.summersteminstitute.org/">Summer STEM Institute</a></h3>
+                                            <p>Selected as one of the 325 students to form the 2021 Bootcamp Program cohort (out of 2,150 applicants) to study in a rigorous summer program to learn to conduct Data Science Research and Programming for Data
+                                                Science
+                                            </p>
                                         </li>
-                                        <li class="event" data-date="8:30 - 9:30pm">
-                                            <h3>Closing Ceremony</h3>
+                                        <li class="event" data-date="2018-2019">
+                                            <h3>Junior Agents of Change</h3>
+                                            <p>Selected as one of the 100 out of 800+ applicants to participate in the Junior Agents of Change school of civic education; completed project management, volunteering, business and presentation courses</p>
+                                            <p>Founded an English speaking club about space at Ivano-Frankivsk city</p>
+                                        </li>
+                                        <li class="event" data-date="2018">
+                                            <h3>JAS Summer School in Thermodynamics</h3>
                                             <p>See how is the victor and who are the losers. The big stage is where the winners bask in their own glory.</p>
                                         </li>
                                     </ul>
@@ -89,6 +130,67 @@
                         </div>
                     </div>
                 </div>
+
+
+                <h4 class="add-ed">INTERNSHIPS AND VOLUNTEERING</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="content">
+                                    <ul class="timeline">
+                                        <li class="event" data-date="2020-present">
+                                            <h3>Team Lead at TurBOTa</h3>
+                                            <p>Leader of the team of volunteers that develops the first-ever Telegram bot TurBOTa to promote cruelty-free culture in Eastern Europe. Our followers can access information if the product is tested on animals,
+                                                vegan status, and cruelty-free alternatives sorted by categories. Currently we have 1700 followers and more than 400 brands in our database.</p>
+                                        </li>
+                                        <li class="event" data-date="2019-present">
+                                            <h3>
+                                                <a href="https://www.ugs.foundation/">Ukraine Global Scholars</a>
+                                            </h3>
+                                            <p>Co-mentor, Admission reviewer, organizator of the annual Boot Camp, volunteer at the annual SAT/TOEFL Summer School</p>
+                                            <p>Chosen as one of 48 finalists out of 500+ applicants by Ukraine Global Scholars 501c3 — a community-based organization that supports talented Ukrainian students in applying to top US colleges and universities</p>
+                                        </li>
+                                        <li class="event" data-date="summer 2021">
+                                            <h3><a href="https://precoro.com/">Product Manager at Precoro</a></h3>
+                                            <p>Summer Internship at a leading Procurement Software Company in Ukrainian capital city with customers from 67 countries around the world</p>
+                                            <p>Worked with Precoro Knowledge base to update documentation on the product; managed product analytics; tested new features and tracked bugs</p>
+                                        </li>
+                                        <li class="event" data-date="summer 2020">
+                                            <h3>
+                                                <a href="https://chckr.io/">Natural Language Processing Research Intern at CHCKR</a>
+                                            </h3>
+                                            <p>Research intern at CHCKR, Ukrainian AI and Machine Learning Startup that gives feedback on college essays; wrote 5+ papers on describing logic for existing Natural Language Processing problems</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <h4 class="add-ed">OTHER</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="content">
+                                    <ul class="timeline">
+                                        <li class="event" data-date="">
+                                            <p>Ranked Top-10 at the World Professional Jiu-Jitsu Championship in Abu-Dhabi in female blue belts category out of ~1000 participants and ~20 countries</p>
+                                            <p>Multiple times winner of the National Jiu-Jitsu Championships in Ukraine</p>
+                                            <p>Java (advanced), C (intermediate), Python (intermediate) and NumPy, Qiskit, SciPy, Pandas, Seaborn, Matplotlib libraries, CSS/HTML (intermediate)</p>
+                                            <p>Ukrainian (native), Russian (bilingual), English (fluent), Chinese (beginner, HSK 2)</p>
+                                            <p>2nd prize winner of the regional Olympiad in Physics (500 students), Geographical Debates tournament (50 preselected students), and Biological Debates tournament (50 preselected students)</p>
+                                            <p>3rd prize winner of the regional Math Debates tournament (45 preselected students), Olympiads in English (500 students), and Ukrainian language and literature (600 students)</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
