--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h3>Veronika Kitsul</h3>
                 <p>
                     Welcome! I am a senior at <a href="https://www.stmarksschool.org/"><mark>St. Mark's School.</mark></a> I am interested in Physics, Computer Science, Math, and Sustainability. I am an avid researcher and love exploring everything new
-                    from guitar playing to quantum computing.
+                    from Space Race political cartoons to quantum computing.
                 </p>
                 <p>
                     Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar and run cross-country in my free time.
