--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="left-side-menu-fixed">
-        <a href="website.html" class="logo-menu-fixed">
+        <a href="index.html" class="logo-menu-fixed">
             <h1>VERONIKA</h1>
             <p>KITSUL</p>
         </a>
