--- a/cv.html
+++ b/cv.html
@@ -18,7 +18,7 @@
         <div class="ul-list-menu-fixed">
             <ul>
                 <li>
-                    <a href="education.html">
+                    <a href="cv.html">
                         <span>CV</span>
                     </a>
                 </li>
@@ -34,7 +34,7 @@
     <div class="visit-card">
         <div class="media-body">
             <div class="education-text">
-                <h4>EDUCATION</h4>
+                <h3 class="headers" id="first-header">EDUCATION</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -42,13 +42,13 @@
                                 <div id="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2020-2022">
-                                            <h3><a href="https://www.stmarksschool.org/">St. Mark's School</a></h3>
+                                            <h4><a href="https://www.stmarksschool.org/">ST. MARK'S SCHOOL</a></h4>
                                             <p>Selected to do a research on theoretical computer science at Taft STEM Fellowship program</p>
                                             <p>Chosen to participate at Lion's Roam experiential learning course with trips to South Africa and Southern US</p>
                                             <p>Co-head of the International Student Connection Affinity Group</p>
                                         </li>
                                         <li class="event" data-date="2016-2020">
-                                            <h3>Ivano-Frankivsk Academical Lyceum</h3>
+                                            <h4>IVANO-FRANKIVSK ACADEMICAL LYCEUM</h4>
                                             <p>GPA: 11.3 out of 12.0</p>
                                             <p>Ranked 1 out of 450 students for four years in a row and recognized as a "Student of the Year"</p>
                                             <p>Recipient of the Mayor Scholarship for outstanding academic achievements in 20+ regional competitions</p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
 
-                <h4 class="add-ed">SCIENTIFIC RESEARCH</h4>
+                <h3 class="headers">SCIENTIFIC RESEARCH</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -69,18 +69,18 @@
                                 <div class="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2018-2020">
-                                            <h3>Electrochemical supercapacitors based on nanoporous carbon from apricot seeds</h3>
+                                            <h4>ELECTROCHEMICAL SUPERCAPACITORS BASED ON NANOPOROUS CARBON FROM APRICOT SEEDS</h4>
                                             <p>Finalist of the International Science Fair "Genius Olympiad" (cancelled due to COVID-19)</p>
                                             <p>Selected to represent Ukraine at the international Science Fair “Think Science” (cancelled due to COVID-19)</p>
                                             <p>3rd prize winner of the National Stage of Research Competition at Junior Academy of Sciences of Ukraine in Experimental Physics (out of 7983 participants)</p>
                                         </li>
                                         <li class="event" data-date="present">
-                                            <h3>Current Research</h3>
+                                            <h4>CURRENT RESEARCH</h4>
                                             <p>Conducting a research project as part of the Taft STEM Fellowship course at St. Mark's School on Chaotic Electrical Circuits in Cryptography</p>
                                             <p>History Fellowship on Space Race Policital Cartoons in the US and USSR</p>
                                         </li>
                                         <li class="event" data-date="2019">
-                                            <h3>Properties of Quenched Glass</h3>
+                                            <h4>PROPERTIES OF QUENCHED GLASS</h4>
                                             <p>2nd prize winner of the Regional Stage of Research Competition at Junior Academy of Sciences of Ukraine in Experimental Physics</p>
                                             <p>Studied traditional ways of glass quenching and Prince Rupert's drop characteristics; described a correlation between various conditions during the formation of the drop and its resilience; suggested creating
                                                 a quenched glass in a linear form and a quenched triplex</p>
@@ -94,7 +94,7 @@
 
 
 
-                <h4 class="add-ed">ADDITIONAL EDUCATION</h4>
+                <h3 class="headers">ADDITIONAL EDUCATION</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -102,26 +102,26 @@
                                 <div class="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2021">
-                                            <h3><a href="https://www.qubitbyqubit.org/">Qubit by Qubit Quantum Computing Summer School</a></h3>
+                                            <h4><a href="https://www.qubitbyqubit.org/">QUBIT BY QUBIT QUANTUM COMPUTING SUMMER SCHOOL</a></h4>
                                             <p>Received a scholarship from IBM Quantum to attend a quantum computing summer program as one of 250 students out of 3000 students who applied.</p>
                                         </li>
                                         <li class="event" data-date="2021">
-                                            <h3><a href="https://ulo.stanford.edu/mathematics">Stanford Pre-Collegiate University-Level Online Math</a></h3>
+                                            <h4><a href="https://ulo.stanford.edu/mathematics">STANFORD PRE-COLLEGIATE UNIVERSITY-LEVEL ONLINE MATH</a></h4>
                                             <p>Completed two-months summer program in XM511 Linear Algebra course intended for Math majors</p>
                                         </li>
                                         <li class="event" data-date="2021">
-                                            <h3><a href="https://www.summersteminstitute.org/">Summer STEM Institute</a></h3>
+                                            <h4><a href="https://www.summersteminstitute.org/">SUMMER STEM INSTITUTE</a></h4>
                                             <p>Selected as one of the 325 students to form the 2021 Bootcamp Program cohort (out of 2,150 applicants) to study in a rigorous summer program to learn to conduct Data Science Research and Programming for Data
                                                 Science
                                             </p>
                                         </li>
                                         <li class="event" data-date="2018-2019">
-                                            <h3>Junior Agents of Change</h3>
+                                            <h4>JUNIOR AGENTS OF CHANGE</h4>
                                             <p>Selected as one of the 100 out of 800+ applicants to participate in the Junior Agents of Change school of civic education; completed project management, volunteering, business and presentation courses</p>
                                             <p>Founded an English speaking club about space at Ivano-Frankivsk city</p>
                                         </li>
                                         <li class="event" data-date="2018">
-                                            <h3>JAS Summer School in Thermodynamics</h3>
+                                            <h4>JAS SUMMER SCHOOL IN THERMODYNAMICS</h4>
                                             <p>See how is the victor and who are the losers. The big stage is where the winners bask in their own glory.</p>
                                         </li>
                                     </ul>
@@ -132,7 +132,7 @@
                 </div>
 
 
-                <h4 class="add-ed">INTERNSHIPS AND VOLUNTEERING</h4>
+                <h3 class="headers">INTERNSHIPS AND VOLUNTEERING</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -140,26 +140,26 @@
                                 <div class="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2020-present">
-                                            <h3>Team Lead at TurBOTa</h3>
+                                            <h4>TEAM LEAD AT TurBOTa</h4>
                                             <p>Leader of the team of volunteers that develops the first-ever Telegram bot TurBOTa to promote cruelty-free culture in Eastern Europe. Our followers can access information if the product is tested on animals,
                                                 vegan status, and cruelty-free alternatives sorted by categories. Currently we have 1700 followers and more than 400 brands in our database.</p>
                                         </li>
                                         <li class="event" data-date="2019-present">
-                                            <h3>
-                                                <a href="https://www.ugs.foundation/">Ukraine Global Scholars</a>
-                                            </h3>
+                                            <h4>
+                                                <a href="https://www.ugs.foundation/">UKRAINE GLOBAL SCHOLARS</a>
+                                            </h4>
                                             <p>Co-mentor, Admission reviewer, organizator of the annual Boot Camp, volunteer at the annual SAT/TOEFL Summer School</p>
                                             <p>Chosen as one of 48 finalists out of 500+ applicants by Ukraine Global Scholars 501c3 — a community-based organization that supports talented Ukrainian students in applying to top US colleges and universities</p>
                                         </li>
                                         <li class="event" data-date="summer 2021">
-                                            <h3><a href="https://precoro.com/">Product Manager at Precoro</a></h3>
+                                            <h4><a href="https://precoro.com/">PRODUCT MANAGER AT PRECORO</a></h4>
                                             <p>Summer Internship at a leading Procurement Software Company in Ukrainian capital city with customers from 67 countries around the world</p>
                                             <p>Worked with Precoro Knowledge base to update documentation on the product; managed product analytics; tested new features and tracked bugs</p>
                                         </li>
                                         <li class="event" data-date="summer 2020">
-                                            <h3>
-                                                <a href="https://chckr.io/">Natural Language Processing Research Intern at CHCKR</a>
-                                            </h3>
+                                            <h4>
+                                                <a href="https://chckr.io/">NATURAL LANGUAGE PROCESSING RESEARCH INTERN AT CHCKR</a>
+                                            </h4>
                                             <p>Research intern at CHCKR, Ukrainian AI and Machine Learning Startup that gives feedback on college essays; wrote 5+ papers on describing logic for existing Natural Language Processing problems</p>
                                         </li>
                                     </ul>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-                <h4 class="add-ed">OTHER</h4>
+                <h3 class="headers">OTHER</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
