--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="visit-card">
+    <div class="visit-card-cv">
         <div class="media-body">
             <div class="education-text">
                 <h3 class="headers" id="first-header">EDUCATION</h3>
