--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veronika Kitsul</title>
-    <link href="style.css" rel="stylesheet">
+    <title>Document</title>
 </head>
 
 <body>
@@ -56,14 +55,14 @@
                 </div>
                 <div class="personal-social">
                     <span>
-                        <a href="https://www.facebook.com/veronika.kitsul"><img src="f.png"></a>
+                            <a href="https://www.facebook.com/veronika.kitsul"><img src="f.png"></a>
+                            </span>
+                    <span>
+                            <a href="https://www.linkedin.com/in/veronika-kitsul-6606751aa/"><img src="lin.png"></a>
                         </span>
                     <span>
-                        <a href="https://www.linkedin.com/in/veronika-kitsul-6606751aa/"><img src="lin.png"></a>
-                    </span>
-                    <span>
-                        <a href="https://github.com/Veronika-Kitsul"><img src="git.png"></a>
-                    </span>
+                            <a href="https://github.com/Veronika-Kitsul"><img src="git.png"></a>
+                        </span>
                 </div>
             </div>
         </div>
