--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="projects.html">
                         <span>PROJECTS</span>
                     </a>
                 </li>
