--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veronika Kitsul</title>
     <link href="style.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="profile copy.jpg" type="image/x-icon">
+    <!-- wideley used favicon -->
+    <link rel="icon" href="profile copy.jpg" sizes="32x32" type="image/png">
+    <!-- for apple mobile devices -->
+    <link rel="apple-touch-icon-precomposed" href="profile copy.jpg" type="image/png" sizes="152x152">
+    <link rel="apple-touch-icon-precomposed" href="profile copy.jpg" type="image/png" sizes="120x120">
+    <!-- google tv favicon -->
+    <link rel="icon" href="/favicon-googletv.png" sizes="96x96" type="image/png">
 </head>
 
 <body>
@@ -18,7 +27,7 @@
         <div class="ul-list-menu-fixed">
             <ul>
                 <li>
-                    <a href="cv.html">
+                    <a href="cv.html" id="cv">
                         <span>CV</span>
                     </a>
                 </li>
@@ -42,7 +51,7 @@
                                 <div id="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2020-2022">
-                                            <h4><a href="https://www.stmarksschool.org/">ST. MARK'S SCHOOL</a></h4>
+                                            <h4><a href="https://www.stmarksschool.org/"><mark>ST. MARK'S SCHOOL</mark></a></h4>
                                             <p>Selected to do a research on theoretical computer science at Taft STEM Fellowship program</p>
                                             <p>Chosen to participate at Lion's Roam experiential learning course with trips to South Africa and Southern US</p>
                                             <p>Co-head of the International Student Connection Affinity Group</p>
@@ -102,15 +111,15 @@
                                 <div class="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2021">
-                                            <h4><a href="https://www.qubitbyqubit.org/">QUBIT BY QUBIT QUANTUM COMPUTING SUMMER SCHOOL</a></h4>
+                                            <h4><a href="https://www.qubitbyqubit.org/"><mark>QUBIT BY QUBIT QUANTUM COMPUTING SUMMER SCHOOL</mark></a></h4>
                                             <p>Received a scholarship from IBM Quantum to attend a quantum computing summer program as one of 250 students out of 3000 students who applied.</p>
                                         </li>
                                         <li class="event" data-date="2021">
-                                            <h4><a href="https://ulo.stanford.edu/mathematics">STANFORD PRE-COLLEGIATE UNIVERSITY-LEVEL ONLINE MATH</a></h4>
+                                            <h4><a href="https://ulo.stanford.edu/mathematics"><mark>STANFORD PRE-COLLEGIATE UNIVERSITY-LEVEL ONLINE MATH</mark></a></h4>
                                             <p>Completed two-months summer program in XM511 Linear Algebra course intended for Math majors</p>
                                         </li>
                                         <li class="event" data-date="2021">
-                                            <h4><a href="https://www.summersteminstitute.org/">SUMMER STEM INSTITUTE</a></h4>
+                                            <h4><a href="https://www.summersteminstitute.org/"><mark>SUMMER STEM INSTITUTE</mark></a></h4>
                                             <p>Selected as one of the 325 students to form the 2021 Bootcamp Program cohort (out of 2,150 applicants) to study in a rigorous summer program to learn to conduct Data Science Research and Programming for Data
                                                 Science
                                             </p>
@@ -122,7 +131,8 @@
                                         </li>
                                         <li class="event" data-date="2018">
                                             <h4>JAS SUMMER SCHOOL IN THERMODYNAMICS</h4>
-                                            <p>See how is the victor and who are the losers. The big stage is where the winners bask in their own glory.</p>
+                                            <p>Invited to study in a week-long summer school under guidance of some of the best Ukrainian physicists from the National University of T. Shevchenko; developed a scientific and enginnering projects, and gave
+                                                a presentation about them</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -140,25 +150,29 @@
                                 <div class="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2020-present">
-                                            <h4>TEAM LEAD AT TurBOTa</h4>
+                                            <h4>
+                                                <a href="https://t.me/ESMURateBot">
+                                                    <mark>TEAM LEAD AT TurBOTa</mark>
+                                                </a>
+                                            </h4>
                                             <p>Leader of the team of volunteers that develops the first-ever Telegram bot TurBOTa to promote cruelty-free culture in Eastern Europe. Our followers can access information if the product is tested on animals,
                                                 vegan status, and cruelty-free alternatives sorted by categories. Currently we have 1700 followers and more than 400 brands in our database.</p>
                                         </li>
                                         <li class="event" data-date="2019-present">
                                             <h4>
-                                                <a href="https://www.ugs.foundation/">UKRAINE GLOBAL SCHOLARS</a>
+                                                <a href="https://www.ugs.foundation/"><mark>UKRAINE GLOBAL SCHOLARS</mark></a>
                                             </h4>
                                             <p>Co-mentor, Admission reviewer, organizator of the annual Boot Camp, volunteer at the annual SAT/TOEFL Summer School</p>
                                             <p>Chosen as one of 48 finalists out of 500+ applicants by Ukraine Global Scholars 501c3 — a community-based organization that supports talented Ukrainian students in applying to top US colleges and universities</p>
                                         </li>
                                         <li class="event" data-date="summer 2021">
-                                            <h4><a href="https://precoro.com/">PRODUCT MANAGER AT PRECORO</a></h4>
+                                            <h4><a href="https://precoro.com/"><mark>PRODUCT MANAGER AT PRECORO</mark></a></h4>
                                             <p>Summer Internship at a leading Procurement Software Company in Ukrainian capital city with customers from 67 countries around the world</p>
                                             <p>Worked with Precoro Knowledge base to update documentation on the product; managed product analytics; tested new features and tracked bugs</p>
                                         </li>
                                         <li class="event" data-date="summer 2020">
                                             <h4>
-                                                <a href="https://chckr.io/">NATURAL LANGUAGE PROCESSING RESEARCH INTERN AT CHCKR</a>
+                                                <a href="https://chckr.io/"><mark>NATURAL LANGUAGE PROCESSING RESEARCH INTERN AT CHCKR</mark></a>
                                             </h4>
                                             <p>Research intern at CHCKR, Ukrainian AI and Machine Learning Startup that gives feedback on college essays; wrote 5+ papers on describing logic for existing Natural Language Processing problems</p>
                                         </li>
