--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veronika Kitsul</title>
     <link href="style.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="profile copy.jpg" type="image/x-icon">
+    <!-- wideley used favicon -->
+    <link rel="icon" href="profile copy.jpg" sizes="32x32" type="image/png">
+    <!-- for apple mobile devices -->
+    <link rel="apple-touch-icon-precomposed" href="profile copy.jpg" type="image/png" sizes="152x152">
+    <link rel="apple-touch-icon-precomposed" href="profile copy.jpg" type="image/png" sizes="120x120">
+    <!-- google tv favicon -->
+    <link rel="icon" href="/favicon-googletv.png" sizes="96x96" type="image/png">
 </head>
 
 <body>
     <div class="left-side-menu-fixed">
-        <a href="index.html" class="logo-menu-fixed">
+        <a href="index.html" class="logo-menu-fixed" id="active">
             <h1>VERONIKA</h1>
             <p>KITSUL</p>
         </a>
