--- a/cv.html
+++ b/cv.html
@@ -51,7 +51,7 @@
                                 <div id="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2020-2022">
-                                            <h4><a href="https://www.stmarksschool.org/" class="underline-cv-page"><mark>ST. MARK'S SCHOOL</mark></a></h4>
+                                            <h4><a href="https://www.stmarksschool.org/" class="underline-cv-page">ST. MARK'S SCHOOL</a></h4>
                                             <p>Selected to do a research on theoretical computer science at Taft STEM Fellowship program</p>
                                             <p>Chosen to participate at Lion's Roam experiential learning course with trips to South Africa and Southern US</p>
                                             <p>Co-head of the International Student Connection Affinity Group</p>
@@ -111,15 +111,15 @@
                                 <div class="content">
                                     <ul class="timeline">
                                         <li class="event" data-date="2021">
-                                            <h4><a href="https://www.qubitbyqubit.org/" class="underline-cv-page"><mark>QUBIT BY QUBIT QUANTUM COMPUTING SUMMER SCHOOL</mark></a></h4>
+                                            <h4><a href="https://www.qubitbyqubit.org/" class="underline-cv-page">QUBIT BY QUBIT QUANTUM COMPUTING SUMMER SCHOOL</a></h4>
                                             <p>Received a scholarship from IBM Quantum to attend a quantum computing summer program as one of 250 students out of 3000 students who applied.</p>
                                         </li>
                                         <li class="event" data-date="2021">
-                                            <h4><a href="https://ulo.stanford.edu/mathematics" class="underline-cv-page"><mark>STANFORD PRE-COLLEGIATE UNIVERSITY-LEVEL ONLINE MATH</mark></a></h4>
+                                            <h4><a href="https://ulo.stanford.edu/mathematics" class="underline-cv-page">STANFORD PRE-COLLEGIATE UNIVERSITY-LEVEL ONLINE MATH</a></h4>
                                             <p>Completed two-months summer program in XM511 Linear Algebra course intended for Math majors</p>
                                         </li>
                                         <li class="event" data-date="2021">
-                                            <h4><a href="https://www.summersteminstitute.org/" class="underline-cv-page"><mark>SUMMER STEM INSTITUTE</mark></a></h4>
+                                            <h4><a href="https://www.summersteminstitute.org/" class="underline-cv-page">SUMMER STEM INSTITUTE</a></h4>
                                             <p>Selected as one of the 325 students to form the 2021 Bootcamp Program cohort (out of 2,150 applicants) to study in a rigorous summer program to learn to conduct Data Science Research and Programming for Data
                                                 Science
                                             </p>
@@ -152,7 +152,7 @@
                                         <li class="event" data-date="2020-present">
                                             <h4>
                                                 <a href="https://t.me/ESMURateBot" class="underline-cv-page">
-                                                    <mark>TEAM LEAD AT TurBOTa</mark>
+                                                   TEAM LEAD AT TurBOTa
                                                 </a>
                                             </h4>
                                             <p>Leader of the team of volunteers that develops the first-ever Telegram bot TurBOTa to promote cruelty-free culture in Eastern Europe. Our followers can access information if the product is tested on animals,
@@ -160,19 +160,19 @@
                                         </li>
                                         <li class="event" data-date="2019-present">
                                             <h4>
-                                                <a href="https://www.ugs.foundation/" class="underline-cv-page"><mark>UKRAINE GLOBAL SCHOLARS</mark></a>
+                                                <a href="https://www.ugs.foundation/" class="underline-cv-page">UKRAINE GLOBAL SCHOLARS</a>
                                             </h4>
                                             <p>Co-mentor, Admission reviewer, organizator of the annual Boot Camp, volunteer at the annual SAT/TOEFL Summer School</p>
                                             <p>Chosen as one of 48 finalists out of 500+ applicants by Ukraine Global Scholars 501c3 — a community-based organization that supports talented Ukrainian students in applying to top US colleges and universities</p>
                                         </li>
                                         <li class="event" data-date="summer 2021">
-                                            <h4><a href="https://precoro.com/" class="underline-cv-page"><mark>PRODUCT MANAGER AT PRECORO</mark></a></h4>
+                                            <h4><a href="https://precoro.com/" class="underline-cv-page">PRODUCT MANAGER AT PRECORO</a></h4>
                                             <p>Summer Internship at a leading Procurement Software Company in Ukrainian capital city with customers from 67 countries around the world</p>
                                             <p>Worked with Precoro Knowledge base to update documentation on the product; managed product analytics; tested new features and tracked bugs</p>
                                         </li>
                                         <li class="event" data-date="summer 2020">
                                             <h4>
-                                                <a href="https://chckr.io/" class="underline-cv-page"><mark>NATURAL LANGUAGE PROCESSING RESEARCH INTERN AT CHCKR</mark></a>
+                                                <a href="https://chckr.io/" class="underline-cv-page">NATURAL LANGUAGE PROCESSING RESEARCH INTERN AT CHCKR</a>
                                             </h4>
                                             <p>Research intern at CHCKR, Ukrainian AI and Machine Learning Startup that gives feedback on college essays; wrote 5+ papers on describing logic for existing Natural Language Processing problems</p>
                                         </li>
